# Endo

./: .Rbuildignore  .gitignore  DESCRIPTION  Dockerfile  FIREpHly.Rmd  FIREpHly.html  FIREpHly.nb.html  IPMS.Rmd  IPMS.html  IPMS.nb.html  IPMS_git.Rmd  IPMS_git.html  IPMS_git.md  IPMSmarkdown.html  IPMSnb.Rmd  IPMSnb.nb.html  PostCrapomeCandidateList.csv  PreCrapomeCandidateList.csv  README.md  devpkg.R  setup.py  tidied_puncta_data.csv
python/: .coveragerc.py  .gitignore  README.md  environment.yml  proteomics.ipynb  proteomics.py  pyproject.toml  pytest.ini  ranked_interactome.csv  setup.py
python/saint/: __init__.py
python/saint.egg-info/: PKG-INFO  SOURCES.txt
python/saint/diagnostics/: __init__.py  diagnostics.py  diagnostics_classical.py  diagnostics_hierarchical.py  diagnostics_pipeline.py  diagnostics_tau_grid.py  parameter_trajectories.py
python/saint/io/: __init__.py  data_input.py  mapping.py  save_load.py
python/saint/model/: __init__.py  classical_em.py  hierarchical_em.py  (+8 more)
python/tests/: __init__.py  _roadmap_future_tests.md  test_classical_em_wrapper.py  test_classical_pipeline.py  test_classical_pipeline_integration.py  test_classical_responsibilities.py  test_compute_loglikelihood_classical.py  test_compute_loglikelihood_hierarchical.py  test_data_input.py  test_diagnostics_classical.py  test_diagnostics_hierarchical.py  test_hierarchical_conftest.py  test_hierarchical_em_wrapper.py  test_hierarchical_pipeline.py  test_hierarchical_tau_grid.py  test_hierarchical_tau_grid_integration.py  test_package_integrity.py  test_validate_hyperparams.py
(+81 files in other folders)
