[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saint"
version = "0.1.0"
description = "Modular, explicit, reproducible implementation of classical and hierarchical SAINT models."
authors = [
    { name = "Erik Larsen" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]